syntax = "proto3";

package auth;

option go_package = "shapeup.auth.v1;authv1";

service Auth {
  rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1; // User email or login
  string password = 2; // User password
}

message LoginResponse {
  string user_id = 1;
}
